--- a/package.json
+++ b/package.json
@@ -12,50 +12,49 @@
   "dependencies": {
     "@base-org/account": "^2.5.0",
     "@base-org/account-ui": "^1.0.1",
-    "@coinbase/wallet-sdk": "^4.3.7",
+    "@coinbase/wallet-sdk": "^4.2.0",
     "@farcaster/auth-kit": "^0.8.1",
     "@farcaster/miniapp-core": "^0.4.1",
     "@farcaster/miniapp-node": "^0.1.11",
     "@farcaster/miniapp-sdk": "^0.2.1",
     "@farcaster/miniapp-wagmi-connector": "^1.1.0",
     "@metamask/sdk": "^0.34.0",
-    "@radix-ui/react-label": "^2.1.8",
-    "@rainbow-me/rainbowkit": "^2.2.9",
-    "@safe-global/safe-apps-provider": "^0.18.6",
-    "@tanstack/react-query": "^5.90.12",
-    "@walletconnect/ethereum-provider": "^2.23.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@rainbow-me/rainbowkit": "^2.1.0",
+    "@safe-global/safe-apps-provider": "^0.18.0",
+    "@tanstack/react-query": "^5.0.0",
+    "@walletconnect/ethereum-provider": "^2.10.0",
     "@worldcoin/mini-apps-ui-kit-react": "^1.4.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "framer-motion": "^12.23.25",
-    "iconoir-react": "^7.11.0",
-    "lucide-react": "^0.542.0",
-    "next": "16.0.7",
-    "next-themes": "^0.4.6",
-    "ox": "^0.9.4",
-    "react": "19.2.1",
-    "react-dom": "19.2.1",
-    "react-icons": "^5.5.0",
-    "siwe": "^3.0.0",
-    "tailwind-merge": "^3.4.0",
-    "tailwindcss-animate": "^1.0.7",
-    "viem": "^2.41.2",
-    "wagmi": "^3.1.0"
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.0",
+    "iconoir-react": "^7.0.0",
+    "lucide-react": "^0.400.0",
+    "next": "15.0.3",
+    "next-themes": "^0.3.0",
+    "ox": "^0.9.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.0.0",
+    "siwe": "^2.0.0",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.0",
+    "viem": "^2.0.0",
+    "wagmi": "^2.0.0"
   },
   "devDependencies": {
-    "@types/node": "^24.3.0",
-    "@types/react": "19.2.6",
-    "@types/react-dom": "19.2.3",
-    "eruda": "^3.4.3",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.7",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
+    "eruda": "^3.0.0",
+    "eslint": "^8.0.0",
+    "eslint-config-next": "15.0.3",
+    "postcss": "^8.0.0",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.0.0"
   },
   "overrides": {
-    "electron-to-chromium": "1.5.260",
-    "baseline-browser-mapping": "2.8.0"
+    "electron-to-chromium": "1.5.0"
   },
-  "packageManager": "npm@11.5.2"
+  "packageManager": "npm@10.0.0"
 }
