--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "rm -rf node_modules/thread-stream/test"
+    "postinstall": "rimraf node_modules/thread-stream/test"
   },
   "dependencies": {
     "@base-org/account": "^2.5.0",
@@ -30,7 +30,7 @@
     "framer-motion": "^11.0.0",
     "iconoir-react": "^7.0.0",
     "lucide-react": "^0.400.0",
-    "next": "15.1.7",
+    "next": "15.1.9",
     "next-themes": "^0.3.0",
     "ox": "^0.9.0",
     "react": "^18.3.1",
@@ -51,7 +51,8 @@
     "eslint-config-next": "15.1.7",
     "postcss": "^8.0.0",
     "tailwindcss": "^3.4.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "rimraf": "^5.0.0"
   },
   "overrides": {
     "electron-to-chromium": "1.5.0"
