--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@base-org/account-ui": "^1.0.1",
     "@coinbase/wallet-sdk": "^4.2.0",
     "@farcaster/auth-kit": "^0.8.1",
+    "@farcaster/frame-node": "^0.1.11",
     "@farcaster/miniapp-core": "^0.4.1",
     "@farcaster/miniapp-node": "^0.1.11",
     "@farcaster/miniapp-sdk": "^0.2.1",
@@ -50,9 +51,9 @@
     "eslint": "^8.0.0",
     "eslint-config-next": "15.1.7",
     "postcss": "^8.0.0",
+    "rimraf": "^5.0.0",
     "tailwindcss": "^3.4.0",
-    "typescript": "^5.0.0",
-    "rimraf": "^5.0.0"
+    "typescript": "^5.0.0"
   },
   "overrides": {
     "electron-to-chromium": "1.5.0"
