--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     "framer-motion": "^11.0.0",
     "iconoir-react": "^7.0.0",
     "lucide-react": "^0.400.0",
-    "next": "15.1.9",
+    "next": "^16.1.1",
     "next-themes": "^0.3.0",
     "ox": "^0.9.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-icons": "^5.0.0",
     "siwe": "^2.0.0",
     "tailwind-merge": "^2.2.0",
